[package]
name = "bollard"
description = "An asynchronous Docker daemon API"
version = "0.15.0"
authors = [ "Bollard contributors" ]
license = "Apache-2.0"
homepage = "https://github.com/fussybeaver/bollard"
repository = "https://github.com/fussybeaver/bollard"
documentation = "https://docs.rs/bollard"
readme = "README.md"
keywords = ["docker"]
edition = "2021"

[workspace]
members = [
  "codegen/swagger",
  "codegen/proto",
  "."
]

[features]
default = []
# Enable Buildkit-enabled docker image building
buildkit = ["chrono", "num", "rand", "tokio/fs", "tokio-util/io", "tonic", "tower-service", "ssl", "bollard-stubs/buildkit", "bollard-buildkit-proto"]
# Enable tests specifically for the http connector
test_http = []
# Enable tests specifically for rustls
test_ssl = ["ssl"]
# Enable tests specifically for macos
test_macos = []
# Enable JSON payload in deserialization errors
json_data_content = []
# Enable rustls / ssl
ssl = ["home", "hyper-rustls", "rustls", "rustls-native-certs", "rustls-pemfile", "rustls-pki-types"]
webpki = ["ssl", "dep:webpki-roots"]
chrono = ["dep:chrono", "bollard-stubs/chrono"]
time = ["dep:time", "bollard-stubs/time"]

[dependencies]
base64 = "0.21"
bollard-stubs = { path = "codegen/swagger", version = "=1.44.0-rc.1", default-features = false }
bollard-buildkit-proto = { path = "codegen/proto", version = "=0.2.1", optional = true }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"], optional = true }
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4.2"
home = { version = "0.5", optional = true }
http = "1.0"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["client", "http1"] }
hyper-rustls = { version = "0.26", optional = true }
hyper-util = { version = "0.1.2", features = ["http1", "client-legacy", "tokio"] }
log = "0.4"
pin-project-lite = "0.2.8"
num = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
rustls = { version = "0.22", optional = true, features = ["ring"] }
rustls-native-certs = { version = "0.7.0", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
rustls-pki-types = { version = "1.1", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1.6"
serde_urlencoded = "0.7"
tokio = { version = "1.35", features = ["time", "net", "io-util"] }
tonic = { version = "0.10", optional = true }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"], optional = true }
tokio-util = { version = "0.7", features = ["codec"] }
tower-service = { version = "0.3", optional = true }
url = "2.2"
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.7", features = ["fs", "rt-multi-thread", "macros"] }
yup-hyper-mock = { version = "8.0.0" }

[target.'cfg(unix)'.dependencies]
hyperlocal = { git = "https://github.com/softprops/hyperlocal", rev = "34dc8579d74f96b68ddbd55582c76019ae18cfdc", version = "0.9.0-alpha" }

[target.'cfg(unix)'.dev-dependencies]
termion = "3.0"

[target.'cfg(windows)'.dependencies]
hyper-named-pipe = { version = "0.1.0" }
winapi = { version = "0.3.9", features = ["winerror"] }
tower-service = { version = "0.3" }

[package.metadata.docs.rs]
features = ["ssl"]
