[package]
name = "bollard-buildkit-proto"
description = "Protobuf definitions to interact with buildkit using Bollard"
version = "0.3.0"
authors = [ "Bollard contributors" ]
license = "Apache-2.0"
repository = "https://github.com/fussybeaver/bollard"
edition = "2021"

[features]
default = ["fetch"]
build = ["tonic-build"]
fetch = ["ureq"]

[[bin]]
name = "gen"
required-features = ["build"]

[[bin]]
name = "fetch"
required-features = ["fetch"]

[dependencies]
tonic = { version = "0.11" }
prost = { version = "0.12" }
prost-types = "0.12"
tonic-build = { version = "0.11", optional = true }
ureq = { version = "2.9.6", optional = true}

