[package]
name = "bollard-buildkit-proto"
description = "Protobuf definitions to interact with buildkit using Bollard"
version = "0.7.0"
authors = [ "Bollard contributors" ]
license = "Apache-2.0"
repository = "https://github.com/fussybeaver/bollard"
edition = "2021"

[features]
default = ["fetch"]
build = ["tonic-prost-build"]
fetch = ["ureq", "ureq/rustls"]

[[bin]]
name = "gen"
required-features = ["build"]

[[bin]]
name = "fetch"
required-features = ["fetch"]

[dependencies]
tonic = { version = "0.14" }
prost = { version = "0.14" }
prost-types = "0.14"
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14", optional = true }
ureq = { version = "3.0.12", features = ["rustls-no-provider"], optional = true, default-features = false }

