[package]
name = "bollard-stubs"
version = "1.49.0-rc.28.3.3"
authors = [ "Bollard contributors" ]
description = "Stubs used for the Bollard rust async Docker client API"
license = "Apache-2.0"
edition = "2021"

[features]
buildkit = ["base64", "bytes", "bollard-buildkit-proto", "prost"]

[dependencies]
base64 = { version = "0.22", optional = true }
bollard-buildkit-proto = { version = "0.7.0", optional = true }
bytes = { version = "1", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = { version = "0.14", optional = true }
time = { version = "0.3", features = ["formatting", "parsing"], optional = true }

serde_with = {version = "3", default-features = false, features = ["std"]}
serde_repr = "0.1"
